--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <main>
         <section class="video-section">
             <video autoplay loop muted>
-                <source src="video.mp4" type="video/mp4">
+                <source src="video 1.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
-            <p>If the video does not load, <a href="https://sora.com/g/gen_01jnmzjdsxfbysm1z71fyb86se" target="_blank">watch it here</a>.</p>
+            <p>If the video does not load, check <a href="video 1.mp4" target="_blank">here</a>.</p>
         </section>
 
         <section id="about" class="about">
@@ -34,7 +34,7 @@
             <div>
                 <h2>About Me</h2>
                 <p>Military Police | Auditor | Information Systems | Project Analyst</p>
-                <p>Currently pursuing a Master of Science in Information Studies at the University of Washington.</p>
+                <p>Currently pursuing a Master of Science in Information Systems at the University of Washington.</p>
                 <button onclick="window.location.href='content.html'">Explore Projects</button>
             </div>
         </section>
