--- a/index.html
+++ b/index.html
@@ -21,17 +21,20 @@
     </header>
 
     <main>
+        <!-- Video Section -->
         <section class="video-section">
-            <video autoplay loop muted>
-                <source src="video 1.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-            <p>If the video does not load, check <a href="video 1.mp4" target="_blank">here</a>.</p>
+            <div class="video-container">
+                <video autoplay loop muted playsinline>
+                    <source src="video 1.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
         </section>
 
+        <!-- About Me Section -->
         <section id="about" class="about">
-            <img src="portrait.jpg" alt="Portrait of Erin">
-            <div>
+            <img src="portrait.jpg" alt="Erin Antanavage">
+            <div class="about-text">
                 <h2>About Me</h2>
                 <p>Military Police | Auditor | Information Systems | Project Analyst</p>
                 <p>Currently pursuing a Master of Science in Information Systems at the University of Washington.</p>
@@ -39,6 +42,7 @@
             </div>
         </section>
 
+        <!-- Contact Section -->
         <section id="contact" class="contact">
             <h2>Contact Me</h2>
             <p>Email: <a href="mailto:erantanavage@gmail.com">erantanavage@gmail.com</a></p>
