--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Erin Antanavage - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header id="navbar">
         <h1>Erin Antanavage</h1>
         <nav>
             <ul>
@@ -36,7 +37,7 @@
             <img src="portrait.jpg" alt="Erin Antanavage">
             <div class="about-text">
                 <h2>About Me</h2>
-                <p>Military Police | Auditor | Information Systems | Project Analyst</p>
+                <p><strong>Military Police | Auditor | Information Systems | Project Analyst</strong></p>
                 <p>Currently pursuing a Master of Science in Information Systems at the University of Washington.</p>
                 <button onclick="window.location.href='content.html'">Explore Projects</button>
             </div>
