--- a/content.html
+++ b/content.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Erin Antanavage</title>
+    <title>Explore Projects - Erin Antanavage</title>
     <link rel="stylesheet" href="styles.css">
     <script defer src="script.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>My Projects</h1>
+        <h1>My Work & Projects</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -19,18 +20,52 @@
     </header>
 
     <main>
-        <section class="ai-content">
-            <h2>AI-Generated Artwork</h2>
-            <img src="ai-image.jpg" alt="AI Generated Image">
-        </section>
-
+        <!-- Professional Experience Section -->
         <section class="experience">
             <h2>Professional Experience</h2>
-            <ul>
-                <li><strong>Washington Army National Guard</strong> – Military Police (2019 - Present)</li>
-                <li><strong>Office of the Inspector General</strong> – Auditor Intern (2023 - 2024)</li>
-                <li><strong>UW Medical Center</strong> – Finance Project/Information Intern (2023)</li>
-            </ul>
+            <div class="experience-list">
+                <div class="experience-item">
+                    <h3>Washington Army National Guard</h3>
+                    <p><strong>Military Police</strong> (2019 - Present)</p>
+                    <p>Leadership role managing a team of 10 soldiers. Experience in **law enforcement, crisis management, and risk assessment**. Missions include civil disobedience response, wildfire management, and COVID-19 relief.</p>
+                </div>
+
+                <div class="experience-item">
+                    <h3>Office of the Inspector General</h3>
+                    <p><strong>Auditor Intern</strong> (2023 - 2024)</p>
+                    <p>Conducted **financial audits, fraud investigations, and risk assessments**. Assisted in detecting inefficiencies in **government financial operations**.</p>
+                </div>
+
+                <div class="experience-item">
+                    <h3>UW Medical Center</h3>
+                    <p><strong>Finance Project/Information Intern</strong> (2023)</p>
+                    <p>Analyzed financial data related to **COVID-19 cost recovery**. Extracted and validated large datasets, ensuring compliance with **financial regulations**.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Projects Section -->
+        <section class="projects">
+            <h2>Highlighted Projects</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    <img src="finance-project.jpg" alt="Finance Project">
+                    <h3>Financial Audit Dashboard</h3>
+                    <p>Developed an **interactive dashboard** to track financial risks and improve auditing efficiency.</p>
+                </div>
+
+                <div class="project-card">
+                    <img src="data-science-project.jpg" alt="Data Science Project">
+                    <h3>Predictive Analytics in Risk Assessment</h3>
+                    <p>Used **machine learning models** to predict **high-risk financial activities**.</p>
+                </div>
+
+                <div class="project-card">
+                    <img src="leadership.jpg" alt="Leadership Project">
+                    <h3>Leadership & Operations Strategy</h3>
+                    <p>Designed a **data-driven strategy** for military logistics and crisis response operations.</p>
+                </div>
+            </div>
         </section>
     </main>
 
