--- a/content.html
+++ b/content.html
@@ -25,15 +25,9 @@
             <h2>Professional Experience</h2>
             <div class="experience-list">
                 <div class="experience-item">
-                    <h3>Washington Army National Guard</h3>
-                    <p><strong>Military Police</strong> (2019 - Present)</p>
-                    <p>Leadership role managing a team of 10 soldiers. Experience in **law enforcement, crisis management, and risk assessment**. Missions include civil disobedience response, wildfire management, and COVID-19 relief.</p>
-                </div>
-
-                <div class="experience-item">
                     <h3>Office of the Inspector General</h3>
                     <p><strong>Auditor Intern</strong> (2023 - 2024)</p>
-                    <p>Conducted **financial audits, fraud investigations, and risk assessments**. Assisted in detecting inefficiencies in **government financial operations**.</p>
+                    <p>Conducted **financial audits, fraud investigations**, and **risk assessments**. Assisted in detecting inefficiencies in **government financial operations**.</p>
                 </div>
 
                 <div class="experience-item">
@@ -42,6 +36,12 @@
                     <p>Analyzed financial data related to **COVID-19 cost recovery**. Extracted and validated large datasets, ensuring compliance with **financial regulations**.</p>
                 </div>
             </div>
+        </section>
+
+        <!-- AI-Generated Image Section -->
+        <section class="ai-image-section">
+            <h2>AI-Generated Visualization</h2>
+            <img src="ai-image.jpg" alt="AI Generated Image" class="ai-image">
         </section>
 
         <!-- Projects Section -->
@@ -61,7 +61,7 @@
                 </div>
 
                 <div class="project-card">
-                    <img src="leadership.jpg" alt="Leadership Project">
+                    <img src="leadership-project.jpg" alt="Leadership Project">
                     <h3>Leadership & Operations Strategy</h3>
                     <p>Designed a **data-driven strategy** for military logistics and crisis response operations.</p>
                 </div>
