--- a/content.html
+++ b/content.html
@@ -27,13 +27,13 @@
                 <div class="experience-item">
                     <h3>Office of the Inspector General</h3>
                     <p><strong>Auditor Intern</strong> (2023 - 2024)</p>
-                    <p>Conducted **financial audits, fraud investigations**, and **risk assessments**. Assisted in detecting inefficiencies in **government financial operations**.</p>
+                    <p>Conducted financial audits, fraud investigations, and risk assessments. Assisted in detecting inefficiencies in government financial operations.</p>
                 </div>
 
                 <div class="experience-item">
                     <h3>UW Medical Center</h3>
                     <p><strong>Finance Project/Information Intern</strong> (2023)</p>
-                    <p>Analyzed financial data related to **COVID-19 cost recovery**. Extracted and validated large datasets, ensuring compliance with **financial regulations**.</p>
+                    <p>Analyzed financial data related to COVID-19 cost recovery. Extracted and validated large datasets, ensuring compliance with financial regulations.</p>
                 </div>
             </div>
         </section>
@@ -51,19 +51,19 @@
                 <div class="project-card">
                     <img src="finance-project.jpg" alt="Finance Project">
                     <h3>Financial Audit Dashboard</h3>
-                    <p>Developed an **interactive dashboard** to track financial risks and improve auditing efficiency.</p>
+                    <p>Developed an interactive dashboard to track financial risks and improve auditing efficiency.</p>
                 </div>
 
                 <div class="project-card">
                     <img src="data-science-project.jpg" alt="Data Science Project">
                     <h3>Predictive Analytics in Risk Assessment</h3>
-                    <p>Used **machine learning models** to predict **high-risk financial activities**.</p>
+                    <p>Used machine learning models to predict high-risk financial activities.</p>
                 </div>
 
                 <div class="project-card">
                     <img src="leadership-project.jpg" alt="Leadership Project">
                     <h3>Leadership & Operations Strategy</h3>
-                    <p>Designed a **data-driven strategy** for military logistics and crisis response operations.</p>
+                    <p>Designed a data-driven strategy for military logistics and crisis response operations.</p>
                 </div>
             </div>
         </section>
