--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <header id="navbar">
         <h1>Erin Antanavage</h1>
         <nav>
             <ul>
@@ -22,16 +22,24 @@
     </header>
 
     <main>
-        <!-- Profile Picture & About Me Section -->
+        <!-- Video Section -->
+        <section class="video-section">
+            <div class="video-container">
+                <video autoplay loop muted playsinline>
+                    <source src="video 1.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+        </section>
+
+        <!-- About Me Section -->
         <section id="about" class="about">
-            <div class="about-container">
-                <img src="portrait.jpg" alt="Erin Antanavage" class="profile-pic">
-                <div class="about-text">
-                    <h2>About Me</h2>
-                    <p><strong>Military Police | Auditor | Information Systems | Project Analyst</strong></p>
-                    <p>Currently pursuing a Master of Science in Information Systems at the University of Washington.</p>
-                    <button onclick="window.location.href='content.html'">Explore Projects</button>
-                </div>
+            <img src="portrait.jpg" alt="Erin Antanavage">
+            <div class="about-text">
+                <h2>About Me</h2>
+                <p><strong>Military Police | Auditor | Information Systems | Project Analyst</strong></p>
+                <p>Currently pursuing a Master of Science in Information Systems at the University of Washington.</p>
+                <button onclick="window.location.href='content.html'">Explore Projects</button>
             </div>
         </section>
 
