--- a/index.html
+++ b/index.html
@@ -22,24 +22,24 @@
     </header>
 
     <main>
-        <!-- Video Section -->
+        <!-- Full-Width Video Background -->
         <section class="video-section">
-            <div class="video-container">
-                <video autoplay loop muted playsinline>
-                    <source src="video 1.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                </video>
-            </div>
+            <video autoplay loop muted playsinline class="background-video">
+                <source src="video1.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
         </section>
 
         <!-- About Me Section -->
         <section id="about" class="about">
-            <img src="portrait.jpg" alt="Erin Antanavage">
-            <div class="about-text">
-                <h2>About Me</h2>
-                <p><strong>Military Police | Auditor | Information Systems | Project Analyst</strong></p>
-                <p>Currently pursuing a Master of Science in Information Systems at the University of Washington.</p>
-                <button onclick="window.location.href='content.html'">Explore Projects</button>
+            <div class="about-container">
+                <img src="portrait.jpg" alt="Erin Antanavage" class="profile-pic">
+                <div class="about-text">
+                    <h2>About Me</h2>
+                    <p><strong>Military Police | Auditor | Information Systems | Project Analyst</strong></p>
+                    <p>Currently pursuing a Master of Science in Information Systems at the University of Washington.</p>
+                    <button onclick="window.location.href='content.html'">Explore Projects</button>
+                </div>
             </div>
         </section>
 
