--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
     </header>
 
     <main>
-        <!-- Full-Width Video Background -->
+        <!-- Full-Width Background Video -->
         <section class="video-section">
             <video autoplay loop muted playsinline class="background-video">
                 <source src="video1.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
+            <div class="video-overlay">
+                <h2>Welcome to My Portfolio</h2>
+            </div>
         </section>
 
         <!-- About Me Section -->
