--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
         <!-- Full-Width Background Video -->
         <section class="video-section">
-            <video autoplay loop muted playsinline class="background-video">
+            <video id="background-video" autoplay loop muted playsinline>
                 <source src="video1.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
