--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erin Antanavage - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <script defer src="script.js"></script>
+    <script defer src="script.js"></script> <!-- Ensure JavaScript runs after page loads -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -26,6 +26,7 @@
         <section class="video-section">
             <video id="background-video" autoplay loop muted playsinline>
                 <source src="video1.mp4" type="video/mp4">
+                Your browser does not support the video tag.
             </video>
             <div class="video-overlay">
                 <h2>Welcome to My Portfolio</h2>
@@ -56,5 +57,15 @@
     <footer>
         <p>© 2024 Erin Antanavage | <a href="https://github.com/your-username/erin-portfolio-site" target="_blank">GitHub Repo</a></p>
     </footer>
+
+    <script>
+        // Force video to play after page loads
+        document.addEventListener("DOMContentLoaded", function () {
+            let video = document.getElementById("background-video");
+            if (video) {
+                video.play().catch(error => console.error("Video autoplay blocked:", error));
+            }
+        });
+    </script>
 </body>
 </html>
