--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                 <source src="video1.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
+                        <div class="video-overlay">
+                <h2>Welcome to My Portfolio</h2>
+            </div>
+        </section>
 
 
         <!-- Rest of content unchanged -->
